# lofi

./: .gitignore  ARCHITECTURE.md  CODE_QUALITY.md  Cargo.toml  PLAN.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/mesh-lab/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/mesh-lab/scripts/: build-wasm.mjs  check-version.mjs
apps/mesh-lab/src/: App.tsx  styles.css  version.ts  vite-env.d.ts
assets/content/: README.md  catalog.sources.json
assets/samples/: README.md
assets/samples/encoded/: hat-closed.ulaw  hat-pedal.ulaw  kick-hard.ulaw  kick-soft.ulaw  snare-hard.ulaw  snare-soft.ulaw
crates/lofi-app/: Cargo.toml
crates/lofi-app/src/: device.rs  display.rs  font.rs  lib.rs  peers.rs
crates/lofi-core/: Cargo.toml  build.rs
crates/lofi-core/examples/: catalog_dump.rs  profile_audit.rs  score_dump.rs
crates/lofi-core/src/: clock.rs  event.rs  generator.rs  groove.rs  lib.rs  mode.rs  protocol.rs  sequencer.rs  synth.rs  transport.rs
crates/lofi-core/src/mesh/: clock.rs  engine.rs  mod.rs  peer.rs  wire.rs
crates/lofi-core/src/music/: arrangement.rs  beat.rs  catalog.rs  character.rs  content.rs  dsp.rs  fx.rs  kit.rs  mod.rs  patch.rs  progression.rs  sample.rs  sample_bank.rs  tables.rs  theory.rs
crates/lofi-core/src/music/score/: drums.rs  mod.rs  render.rs  scene.rs  session.rs  tonal.rs
crates/lofi-core/tests/: mesh_convergence.rs  mesh_engine.rs
crates/lofi-sim/: Cargo.toml
crates/lofi-sim/src/: args.rs  lib.rs  main.rs  node.rs  (+2 more)
crates/lofi-ui/: Cargo.toml
crates/lofi-ui/src/: app.rs  engine.rs  lcd.rs  main.rs  pulse.rs
crates/lofi-web/: Cargo.toml
docs/: AI_CONTENT_PIPELINE.md  COMMERCIALIZATION_ROADMAP.md  HARDWARE_PORTABILITY.md  LISTENING_STUDY.md  LISTEN_QA.md  MESH_SYNC.md  MUSIC_ENGINE.md  PROCEDURAL_ARRANGEMENT.md  PRODUCT.md  SIMULATOR_UI.md  SYMBOLIC_MUSIC.md
docs/reports/: 2026-07-23-symbolic-overnight.md  2026-07-24-symbolic-cycle2.md
tools/: judgement-report.mjs
tools/ai-harvest/: README.md  analyze.py
tools/content-forge/: MULTISAMPLE_RECIPE.md  PHRASE_MINING_BRIEF.md  README.md  forge.py  harvest.py
tools/listen-qa/: README.md  audit-browser-teardown.mjs  bass_qa.py  benchmark-worklet.mjs  candidates.py  diversity.py  evaluate.py  iterate.sh  morning_report.py  render.mjs  scorecard.py  symbolic_gates.py
tools/sample-packer/: Cargo.toml  README.md
(+19 files in other folders)
