[workspace]
members = [
    "crates/lofi-core",
    "crates/lofi-app",
    "crates/lofi-sim",
    "crates/lofi-ui",
]
# lofi-ui pulls cpal (ALSA) and eframe; keep it out of the default set so a bare
# `cargo test` stays green without GUI/audio system libs. Build it explicitly
# with `cargo run -p lofi-ui`.
default-members = [
    "crates/lofi-core",
    "crates/lofi-app",
    "crates/lofi-sim",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/lofi"
