[workspace]
members = [
    "crates/lofi-core",
    "crates/lofi-app",
    "crates/lofi-sim",
    "crates/lofi-web",
    "tools/sample-packer",
]
default-members = [
    "crates/lofi-core",
    "crates/lofi-app",
    "crates/lofi-sim",
    "crates/lofi-web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brensch/lofi"

# Keep edit/build cycles fast for the UI while optimizing the realtime DSP
# crates enough to exercise the same render path used by firmware.
[profile.dev.package.lofi-core]
opt-level = 3

[profile.dev.package.lofi-app]
opt-level = 3

[profile.dev.package.lofi-sim]
opt-level = 3

[profile.dev.package.lofi-web]
opt-level = 3

[profile.dev.package.libm]
opt-level = 3
