[package]
name = "lofi-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
std = []

[dependencies]
# Pure-Rust no_std math (sinf/exp2f/...). Deterministic across the host
# simulator and the ESP32-S3, which matters for sample-accurate mesh rendering.
libm = "0.2"
