[package]
name = "lofi-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Real-time audio out. Needs ALSA dev headers on Linux (libasound2-dev).
# Enabled by default so `cargo run -p lofi-ui` makes sound; disable with
# --no-default-features to build the UI headless (e.g. on CI without ALSA).
default = ["audio"]
audio = ["dep:cpal"]

[dependencies]
eframe = "0.31"
lofi-app = { path = "../lofi-app" }
lofi-sim = { path = "../lofi-sim" }
cpal = { version = "0.15", optional = true }
# Runtime-loaded PulseAudio fallback for hosts cpal/ALSA can't reach (e.g. WSLg).
libloading = "0.8"
